test/fail/Issue260a.agda
-- Module shadowing using generated modules for records and datatypes
module Issue260a where

module D where
data D : Set where
